# goit-algo-hw-04

ftdi/: pyproject.toml
hw4_1/: calculate.py  data.py  main.py
hw4_2/: data.py  main.py  make_dict.py
hw4_3/: main.py
hw4_4/: main.py
