[tool.poetry]
name = "ftdi"
version = "0.1.0"
description = ""
authors = ["Anton Asieiev <ntn.kiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyftdi = "^0.55.0"
pyusb = "^1.2.1"
pyserial = "^3.5"
hid = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
